Play-199 fixed currency kit alignment

--- a/playbook/app/pb_kits/playbook/pb_currency/_currency.scss
+++ b/playbook/app/pb_kits/playbook/pb_currency/_currency.scss
@@ -23,6 +23,7 @@
   }
   [class^=pb_currency_wrapper] {
     display: flex;
+    align-items: baseline;
 
     &[class*=_deemphasized] [class^=pb_body_kit][class*=_light] {
       color: $text_lt_default;
